syntax = "proto3";
package utv.v1;

import "gogoproto/gogo.proto";
import "amino/amino.proto";

option go_package = "github.com/rollchains/pchain/x/utv/types";

message USDValue {
  string amount = 1;
  uint32 decimals = 2;
}

// VerifiedTxMetadata is a format to store verifiedTxs
message VerifiedTxMetadata {
  bool minted = 1; // is tokens minted for the tx hash
  string payload_hash = 2; // payload_hash emitted in the tx
  USDValue usd_value = 3; // usd value emitted in the tx
}
